# hackathon-bmm

./: .dockerignore  .env  .env.example  .env.production  CLEANUP_GUIDE.md  Dockerfile  ENV_CONFIG_GUIDE.md  ENV_CONFIG_UPDATES.md  PITCH_READY.md  PROJECT_STRUCTURE.md  README.md  RENDER_DEPLOYMENT.md  TESTING_COMPREHENSIVE.md  TESTING_GUIDE.md  cleanup.sh  config.py  docker-compose.test.yml  docker-compose.yml  env_switch.sh  init_db.py  main.rs  package.json  payment_monitor.py  quick_demo.sh  render.yaml  requirements.txt  run.py  sale_contract_form.html  simple_server.py  simple_test.sh  start_app.sh  tailwind.config.js  test_backend_integration.py  test_local.sh  test_savings_contract.sh  test_server.py  test_two_users.sh  test_workflow.sh
CONTRACT/: contrat_location.json
app/: __init__.py
app/api/: __init__.py  auth.py  contracts.py  notifications.py  psbt.py  psbt_backup.py  psbt_simple.py
app/models/: __init__.py  contract.py  invitation.py  signature.py  user.py
app/routes/: __init__.py  auth.py  contracts.py  invitations.py  main.py  main_simplified.py
app/services/: notification_service.py  smart_contract_service.py
app/static/css/: output.css
app/static/js/: app.js
app/static/src/: input.css
app/templates/: base.html  dashboard.html  dashboard_clean.html  dashboard_simple.html  index.html  index_backup.html  notifications.html  profile.html
app/templates/auth/: login.html  login_new.html  register.html  register_backup.html  register_new.html
app/templates/contract_templates/: rental_contract_form.html
app/templates/contracts/: create.html  escrow.html  invite.html  list.html  list_backup.html  list_fixed.html  multisig.html  payment.html  preview.html  rental.html  sale.html  savings.html  sign.html  timelock.html
app/templates/emails/: contract_invitation.html
app/templates/partials/: flash_messages.html  footer.html  navbar.html  navbar_simple.html
blockchain_services/: Cargo.toml
blockchain_services/src/: handlers.rs  main.rs
instance/: dealsure_dev.db  securedeal_dev.db
notes/: RUST_CORE_STATUS.md
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: contract_builder.rs  lib.rs  psbt_manager.rs  signature_handler.rs  utils.rs
tests/: conftest.py  test_basic.py
(+1 files in other folders)
