[package]
name = "blockchain_services"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
log = "0.4"


bdk_wallet = { version = "1.1.0", features = ["rusqlite"] }
bdk_esplora = { version = "0.20.1", features = ["blocking"] }

bitcoin = "0.30"
miniscript = { version = "12.3.2", features = ["compiler", "std"] }
hex = "0.4.3"
base64 = "0.22.1"
