[package]
name = "securedeal_core"
version = "0.1.0"
edition = "2021"
description = "Bitcoin PSBT and smart contracts core for SecureDeal"

[lib]
name = "securedeal_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
bdk_wallet = { version = "1.0", default-features = false, features = ["keys-bip39", "std"] }
bdk_esplora = { version = "0.14", default-features = false, features = ["std"] }
bitcoin = "0.31"
miniscript = "11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
pyo3-build-config = "0.20"
