[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "securedeal_core"
version = "0.1.0"
description = "Bitcoin PSBT and smart contracts core module for SecureDeal platform"
authors = [{name = "SecureDeal Team", email = "dev@securedeal.com"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]

[tool.maturin]
features = ["pyo3/extension-module"]
